# logerr

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  RELEASE.md  coverage.xml  mkdocs.yml  pixi.toml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
docs/: index.md
docs/api/: config.md  option.md  result.md
docs/guide/: configuration.md  examples.md  getting-started.md  option-types.md  result-types.md
logerr/: __init__.py  __init__.pyi  config.py  config.pyi  option.py  option.pyi  protocols.py  protocols.pyi  result.py  result.pyi  retry.py  utils.py  utils.pyi
logerr/recipes/: __init__.py  config.py  retry.py  retry.pyi  utilities.py
logerr/recipes/dataframes/: __init__.py  conversion.py  mongo.py  quality.py  types.py
scripts/: build.py  dev.py  docs.py  quality.py  test.py
tests/: conftest.py  test_api.py  test_comparisons.py  test_core_utils.py  test_enhanced_predicates.py  test_option.py  test_property_based.py  test_result.py  test_retry.py  test_utils.py
tests/integration/: test_integration.py
tests/recipes/: __init__.py  test_config_advanced.py  test_init.py  test_retry.py  test_utilities.py
tests/recipes/dataframes/: test_types.py
tests/unit/: hypothesis_edge_cases.py  hypothesis_option.py  hypothesis_result.py  test_api.py  test_comparisons.py  test_core_utils.py  test_enhanced_predicates.py
