[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "logerr"
version = "0.1.0"
description = "Rust-like Option and Result types with automatic logging integration"
authors = [{name = "Jesse Robertson", email = "jess.robertson@niwa.co.nz"}]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["rust", "option", "result", "logging", "error-handling", "functional"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Logging",
]
dependencies = [
    "loguru>=0.7.3,<0.8",
    "confection>=0.1.5,<0.2"
]

[project.urls]
Homepage = "https://github.com/jesserobertson/logerr"
Documentation = "https://jesserobertson.github.io/logerr/"
Repository = "https://github.com/jesserobertson/logerr"
Issues = "https://github.com/jesserobertson/logerr/issues"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by formatter
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true