[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "logerr"
version = "0.1.0"
description = "Rust-like Option and Result types with automatic logging integration"
authors = [{name = "Jesse Robertson", email = "jess.robertson@niwa.co.nz"}]
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
keywords = ["rust", "option", "result", "logging", "error-handling", "functional"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Logging",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]
dependencies = [
    "loguru>=0.7.3,<0.8",
    "confection>=0.1.5,<0.2"
]

[project.optional-dependencies]
recipes = [
    "tenacity>=9.1.2,<10",
    "pymongo>=4.0.0,<5", 
    "pandas>=2.0.0,<3"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["logerr*"]

[tool.setuptools.package-data]
logerr = ["*.pyi", "py.typed"]
"logerr.recipes" = ["*.pyi"]

[project.urls]
Homepage = "https://github.com/jesserobertson/logerr"
Documentation = "https://jesserobertson.github.io/logerr/"
Repository = "https://github.com/jesserobertson/logerr"
Issues = "https://github.com/jesserobertson/logerr/issues"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by formatter
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true